deployment/manifest/ingress/lifesub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-ingress
  namespace: dg0401-lifesub-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: dg0401.20.214.196.128.nip.io
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: member-service
            port:
              number: 80
      - path: /api/mysub
        pathType: Prefix
        backend:
          service:
            name: mysub-service
            port:
              number: 80
      - path: /api/recommend
        pathType: Prefix
        backend:
          service:
            name: recommend-service
            port:
              number: 80
